--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -3,14 +3,23 @@ layout: default
 ---
 <div class="post">
   <header class="post-header">
-    <h1 class="post-title">
-      {% if site.title == 'blank' %}
-        {{ site.first_name }} <span class="font-weight-bold">{{ site.middle_name }}</span> 
-        {{ site.last_name }}
-      {% else %}
-        {{ site.title }}
-      {% endif %}
-    </h1>
+
+  <!-- Inserted Banner AFTER Name -->
+  <div style="background-color:#eef6ff; padding: 8px; display: inline-block; border-radius: 0px; margin-bottom: 2px;">
+    <h2 style="color:#4b6cb7; font-family:monospace; margin: 0; font-size: 20px;">Hello World!</h2>
+  </div>
+  
+  <h1 class="post-title">
+    {% if site.title == 'blank' %}
+      I'm {{ site.first_name }} <span class="font-weight-bold">{{ site.middle_name }}</span> {{ site.last_name }}
+    {% else %}
+      {{ site.title }}
+    {% endif %}
+  </h1>
+
+    
+    
+
     <p class="desc">{{ page.subtitle }}</p>
   </header>
 
@@ -51,7 +60,7 @@ layout: default
     <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
       <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">Latest Posts</a>
+        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">Latest Blogs</a>
       </h2>
       {% include latest_posts.liquid %}
     {% endif %}
